{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 479,
  "lineage": "33ce90a9-0ca9-b5b2-f1b3-1c2543f9562d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "harrydowsettresume",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:640138429565:internet-gateway/igw-054fecb576aed8645",
            "id": "igw-054fecb576aed8645",
            "owner_id": "640138429565",
            "tags": {
              "Name": "Wordpress Arch"
            },
            "tags_all": {
              "Name": "Wordpress Arch"
            },
            "vpc_id": "vpc-03cf30c6f83a5be9f"
          },
          "dependencies": [
            "aws_vpc.harrydowsettresume_wordpress"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "frontends",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "harrydowsettresume-logs-stage",
                "enabled": true,
                "prefix": "frontends"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:640138429565:loadbalancer/app/Edge-frontends/3399c4514dae1616",
            "arn_suffix": "app/Edge-frontends/3399c4514dae1616",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Edge-frontends-2093004365.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:640138429565:loadbalancer/app/Edge-frontends/3399c4514dae1616",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Edge-frontends",
            "security_groups": [
              "sg-06e670a343910d656"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04a614f3985985d9b"
              },
              {
                "subnet_id": "subnet-0ceed6153241846cd"
              }
            ],
            "subnets": [
              "subnet-04a614f3985985d9b",
              "subnet-0ceed6153241846cd"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-03cf30c6f83a5be9f",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.DEVOPS_ADMIN",
            "aws_security_group.edge-frontends-alb",
            "aws_subnet.wordpress-public-1a",
            "aws_subnet.wordpress-public-1b",
            "aws_vpc.harrydowsettresume_wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DEVOPS_ADMIN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:640138429565:security-group/sg-0c4741f5fafe932d5",
            "description": "Security group for DEVOPS_ADMIN access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c4741f5fafe932d5",
            "ingress": [
              {
                "cidr_blocks": [
                  "94.10.139.22/32"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": true,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "94.10.139.22/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 22
              }
            ],
            "name": "DEVOPS_ADMIN",
            "name_prefix": "",
            "owner_id": "640138429565",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DEVOPS_ADMIN access"
            },
            "tags_all": {
              "Name": "DEVOPS_ADMIN access"
            },
            "timeouts": null,
            "vpc_id": "vpc-03cf30c6f83a5be9f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.harrydowsettresume_wordpress"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "edge-frontends-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:640138429565:security-group/sg-06e670a343910d656",
            "description": "Security group for edge-frontends ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06e670a343910d656",
            "ingress": [
              {
                "cidr_blocks": [
                  "67.164.84.151/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c4741f5fafe932d5"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "67.164.84.151/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c4741f5fafe932d5"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "edge-frontends-alb",
            "name_prefix": "",
            "owner_id": "640138429565",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "harry_dowsett ALB"
            },
            "tags_all": {
              "Name": "harry_dowsett ALB"
            },
            "timeouts": null,
            "vpc_id": "vpc-03cf30c6f83a5be9f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.DEVOPS_ADMIN",
            "aws_vpc.harrydowsettresume_wordpress"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wordpress-private-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:640138429565:subnet/subnet-0dbcd7843bde16bbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.11.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dbcd7843bde16bbc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "640138429565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "harrydowsettresume Private 1c Data"
            },
            "tags_all": {
              "Name": "harrydowsettresume Private 1c Data"
            },
            "vpc_id": "vpc-03cf30c6f83a5be9f"
          },
          "dependencies": [
            "aws_vpc.harrydowsettresume_wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wordpress-private-1d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:640138429565:subnet/subnet-06e60ccd4a58c2e1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.11.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e60ccd4a58c2e1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "640138429565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "harrydowsettresume Private 1d Data"
            },
            "tags_all": {
              "Name": "harrydowsettresume Private 1d Data"
            },
            "vpc_id": "vpc-03cf30c6f83a5be9f"
          },
          "dependencies": [
            "aws_vpc.harrydowsettresume_wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wordpress-public-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:640138429565:subnet/subnet-0ceed6153241846cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.11.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ceed6153241846cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "640138429565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "harrydowsettresume Public 1a"
            },
            "tags_all": {
              "Name": "harrydowsettresume Public 1a"
            },
            "vpc_id": "vpc-03cf30c6f83a5be9f"
          },
          "dependencies": [
            "aws_vpc.harrydowsettresume_wordpress"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wordpress-public-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:640138429565:subnet/subnet-04a614f3985985d9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.11.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a614f3985985d9b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "640138429565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "harrydowsettresume Public 1b"
            },
            "tags_all": {
              "Name": "harrydowsettresume Public 1b"
            },
            "vpc_id": "vpc-03cf30c6f83a5be9f"
          },
          "dependencies": [
            "aws_vpc.harrydowsettresume_wordpress"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "harrydowsettresume_wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:640138429565:vpc/vpc-03cf30c6f83a5be9f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.11.0.0/16",
            "default_network_acl_id": "acl-00f54654e1cb6b3f6",
            "default_route_table_id": "rtb-03c25ba44d32afc13",
            "default_security_group_id": "sg-0dde3e7a17f585e96",
            "dhcp_options_id": "dopt-0c58ca604597d1b59",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03cf30c6f83a5be9f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03c25ba44d32afc13",
            "owner_id": "640138429565",
            "tags": {
              "Name": "Wordpress Arch"
            },
            "tags_all": {
              "Name": "Wordpress Arch"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}